--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         uses: dawidd6/action-get-tag@v1
 
       - name: Generate CHANGELOG
-        run: ./release ${{steps.tag.outputs.tag}} > RELEASE
+        run: grep -Pzo "### ${{steps.tag.outputs.tag}}(?s).*?(?=###)" CHANGELOG.md > RELEASE
 
       - name: Github Release
         uses: softprops/action-gh-release@v2
