--- a/mediamtx.yml
+++ b/mediamtx.yml
@@ -1,399 +1,64 @@
-###############################################
-# Global settings
+# This Config file is reduced to the min required use case for COTAK
+# View: https://github.com/bluenviron/mediamtx/blob/main/mediamtx.yml
+# For full MediaMTX Config Options
 
-# Settings in this section are applied anywhere.
-
-###############################################
-# Global settings -> General
-
-# Verbosity of the program; available values are "error", "warn", "info", "debug".
 logLevel: info
-# Destinations of log messages; available values are "stdout", "file" and "syslog".
 logDestinations: [stdout]
-# If "file" is in logDestinations, this is the file which will receive the logs.
-logFile: mediamtx.log
 
-# Timeout of read operations.
 readTimeout: 10s
-# Timeout of write operations.
 writeTimeout: 10s
-# Size of the queue of outgoing packets.
-# A higher value allows to increase throughput, a lower value allows to save RAM.
 writeQueueSize: 512
-# Maximum size of outgoing UDP packets.
-# This can be decreased to avoid fragmentation on networks with a low UDP MTU.
 udpMaxPayloadSize: 1472
-
-# Command to run when a client connects to the server.
-# This is terminated with SIGINT when a client disconnects from the server.
-# The following environment variables are available:
-# * RTSP_PORT: RTSP server port
-# * MTX_CONN_TYPE: connection type
-# * MTX_CONN_ID: connection ID
-runOnConnect:
-# Restart the command if it exits.
-runOnConnectRestart: no
-# Command to run when a client disconnects from the server.
-# Environment variables are the same of runOnConnect.
-runOnDisconnect:
-
-###############################################
-# Global settings -> Authentication
 
 # Authentication method. Available values are:
 # * internal: users are stored in the configuration file
 # * http: an external HTTP URL is contacted to perform authentication
 # * jwt: an external identity server provides authentication through JWTs
 authMethod: internal
-
-# Internal authentication.
-# list of users.
 authInternalUsers:
-  # Default unprivileged user.
-  # Username. 'any' means any user, including anonymous ones.
 - user: any
-  # Password. Not used in case of 'any' user.
-  pass:
-  # IPs or networks allowed to use this user. An empty list means any IP.
   ips: []
-  # List of permissions.
   permissions:
-    # Available actions are: publish, read, playback, api, metrics, pprof.
   - action: publish
-    # Paths can be set to further restrict access to a specific path.
-    # An empty path means any path.
-    # Regular expressions can be used by using a tilde as prefix.
-    path:
   - action: read
-    path:
   - action: playback
-    path:
-
-  # Default administrator.
-  # This allows to use API, metrics and PPROF without authentication,
-  # if the IP is localhost.
-- user: any
-  pass:
-  ips: ['127.0.0.1', '::1']
-  permissions:
   - action: api
   - action: metrics
   - action: pprof
 
-# HTTP-based authentication.
-# URL called to perform authentication. Every time a user wants
-# to authenticate, the server calls this URL with the POST method
-# and a body containing:
-# {
-#   "user": "user",
-#   "password": "password",
-#   "ip": "ip",
-#   "action": "publish|read|playback|api|metrics|pprof",
-#   "path": "path",
-#   "protocol": "rtsp|rtmp|hls|webrtc|srt",
-#   "id": "id",
-#   "query": "query"
-# }
-# If the response code is 20x, authentication is accepted, otherwise
-# it is discarded.
-authHTTPAddress:
-# Actions to exclude from HTTP-based authentication.
-# Format is the same as the one of user permissions.
-authHTTPExclude:
-- action: api
-- action: metrics
-- action: pprof
-
-# JWT-based authentication.
-# Users have to login through an external identity server and obtain a JWT.
-# This JWT must contain the claim "mediamtx_permissions" with permissions,
-# for instance:
-# {
-#  ...
-#  "mediamtx_permissions": [
-#     {
-#       "action": "publish",
-#       "path": "somepath"
-#     }
-#   ]
-# }
-# Users are then expected to pass the JWT as a query parameter, i.e. ?jwt=...
-# This is the JWKS URL that will be used to pull (once) the public key that allows
-# to validate JWTs.
-authJWTJWKS:
-
-###############################################
-# Global settings -> Control API
-
-# Enable controlling the server through the Control API.
-api: no
-# Address of the Control API listener.
+api: yes
 apiAddress: :9997
-# Enable TLS/HTTPS on the Control API server.
 apiEncryption: no
-# Path to the server key. This is needed only when encryption is yes.
-# This can be generated with:
-# openssl genrsa -out server.key 2048
-# openssl req -new -x509 -sha256 -key server.key -out server.crt -days 3650
-apiServerKey: server.key
-# Path to the server certificate.
-apiServerCert: server.crt
-# Value of the Access-Control-Allow-Origin header provided in every HTTP response.
 apiAllowOrigin: '*'
-# List of IPs or CIDRs of proxies placed before the HTTP server.
-# If the server receives a request from one of these entries, IP in logs
-# will be taken from the X-Forwarded-For header.
 apiTrustedProxies: []
 
-###############################################
-# Global settings -> Metrics
 
-# Enable Prometheus-compatible metrics.
-metrics: no
-# Address of the metrics HTTP listener.
-metricsAddress: :9998
-# Enable TLS/HTTPS on the Metrics server.
-metricsEncryption: no
-# Path to the server key. This is needed only when encryption is yes.
-# This can be generated with:
-# openssl genrsa -out server.key 2048
-# openssl req -new -x509 -sha256 -key server.key -out server.crt -days 3650
-metricsServerKey: server.key
-# Path to the server certificate.
-metricsServerCert: server.crt
-# Value of the Access-Control-Allow-Origin header provided in every HTTP response.
-metricsAllowOrigin: '*'
-# List of IPs or CIDRs of proxies placed before the HTTP server.
-# If the server receives a request from one of these entries, IP in logs
-# will be taken from the X-Forwarded-For header.
-metricsTrustedProxies: []
-
-###############################################
-# Global settings -> PPROF
-
-# Enable pprof-compatible endpoint to monitor performances.
-pprof: no
-# Address of the pprof listener.
-pprofAddress: :9999
-# Enable TLS/HTTPS on the pprof server.
-pprofEncryption: no
-# Path to the server key. This is needed only when encryption is yes.
-# This can be generated with:
-# openssl genrsa -out server.key 2048
-# openssl req -new -x509 -sha256 -key server.key -out server.crt -days 3650
-pprofServerKey: server.key
-# Path to the server certificate.
-pprofServerCert: server.crt
-# Value of the Access-Control-Allow-Origin header provided in every HTTP response.
-pprofAllowOrigin: '*'
-# List of IPs or CIDRs of proxies placed before the HTTP server.
-# If the server receives a request from one of these entries, IP in logs
-# will be taken from the X-Forwarded-For header.
-pprofTrustedProxies: []
-
-###############################################
-# Global settings -> Playback server
-
-# Enable downloading recordings from the playback server.
 playback: no
-# Address of the playback server listener.
-playbackAddress: :9996
-# Enable TLS/HTTPS on the playback server.
-playbackEncryption: no
-# Path to the server key. This is needed only when encryption is yes.
-# This can be generated with:
-# openssl genrsa -out server.key 2048
-# openssl req -new -x509 -sha256 -key server.key -out server.crt -days 3650
-playbackServerKey: server.key
-# Path to the server certificate.
-playbackServerCert: server.crt
-# Value of the Access-Control-Allow-Origin header provided in every HTTP response.
-playbackAllowOrigin: '*'
-# List of IPs or CIDRs of proxies placed before the HTTP server.
-# If the server receives a request from one of these entries, IP in logs
-# will be taken from the X-Forwarded-For header.
-playbackTrustedProxies: []
-
-###############################################
-# Global settings -> RTSP server
-
-# Enable publishing and reading streams with the RTSP protocol.
 rtsp: yes
-# List of enabled RTSP transport protocols.
-# UDP is the most performant, but doesn't work when there's a NAT/firewall between
-# server and clients, and doesn't support encryption.
-# UDP-multicast allows to save bandwidth when clients are all in the same LAN.
-# TCP is the most versatile, and does support encryption.
-# The handshake is always performed with TCP.
-protocols: [udp, multicast, tcp]
-# Encrypt handshakes and TCP streams with TLS (RTSPS).
-# Available values are "no", "strict", "optional".
+protocols: [tcp]
 encryption: "no"
-# Address of the TCP/RTSP listener. This is needed only when encryption is "no" or "optional".
 rtspAddress: :8554
-# Address of the TCP/TLS/RTSPS listener. This is needed only when encryption is "strict" or "optional".
 rtspsAddress: :8322
-# Address of the UDP/RTP listener. This is needed only when "udp" is in protocols.
-rtpAddress: :8000
-# Address of the UDP/RTCP listener. This is needed only when "udp" is in protocols.
-rtcpAddress: :8001
-# IP range of all UDP-multicast listeners. This is needed only when "multicast" is in protocols.
-multicastIPRange: 224.1.0.0/16
-# Port of all UDP-multicast/RTP listeners. This is needed only when "multicast" is in protocols.
-multicastRTPPort: 8002
-# Port of all UDP-multicast/RTCP listeners. This is needed only when "multicast" is in protocols.
-multicastRTCPPort: 8003
-# Path to the server key. This is needed only when encryption is "strict" or "optional".
-# This can be generated with:
-# openssl genrsa -out server.key 2048
-# openssl req -new -x509 -sha256 -key server.key -out server.crt -days 3650
-serverKey: server.key
-# Path to the server certificate. This is needed only when encryption is "strict" or "optional".
-serverCert: server.crt
-# Authentication methods. Available are "basic" and "digest".
-# "digest" doesn't provide any additional security and is available for compatibility only.
 rtspAuthMethods: [basic]
 
-###############################################
-# Global settings -> RTMP server
-
-# Enable publishing and reading streams with the RTMP protocol.
 rtmp: yes
-# Address of the RTMP listener. This is needed only when encryption is "no" or "optional".
 rtmpAddress: :1935
-# Encrypt connections with TLS (RTMPS).
-# Available values are "no", "strict", "optional".
 rtmpEncryption: "no"
-# Address of the RTMPS listener. This is needed only when encryption is "strict" or "optional".
 rtmpsAddress: :1936
-# Path to the server key. This is needed only when encryption is "strict" or "optional".
-# This can be generated with:
-# openssl genrsa -out server.key 2048
-# openssl req -new -x509 -sha256 -key server.key -out server.crt -days 3650
-rtmpServerKey: server.key
-# Path to the server certificate. This is needed only when encryption is "strict" or "optional".
-rtmpServerCert: server.crt
 
-###############################################
-# Global settings -> HLS server
-
-# Enable reading streams with the HLS protocol.
-hls: yes
-# Address of the HLS listener.
+hls: no
 hlsAddress: :8888
-# Enable TLS/HTTPS on the HLS server.
-# This is required for Low-Latency HLS.
 hlsEncryption: no
-# Path to the server key. This is needed only when encryption is yes.
-# This can be generated with:
-# openssl genrsa -out server.key 2048
-# openssl req -new -x509 -sha256 -key server.key -out server.crt -days 3650
-hlsServerKey: server.key
-# Path to the server certificate.
-hlsServerCert: server.crt
-# Value of the Access-Control-Allow-Origin header provided in every HTTP response.
-# This allows to play the HLS stream from an external website.
-hlsAllowOrigin: '*'
-# List of IPs or CIDRs of proxies placed before the HLS server.
-# If the server receives a request from one of these entries, IP in logs
-# will be taken from the X-Forwarded-For header.
-hlsTrustedProxies: []
-# By default, HLS is generated only when requested by a user.
-# This option allows to generate it always, avoiding the delay between request and generation.
-hlsAlwaysRemux: no
-# Variant of the HLS protocol to use. Available options are:
-# * mpegts - uses MPEG-TS segments, for maximum compatibility.
-# * fmp4 - uses fragmented MP4 segments, more efficient.
-# * lowLatency - uses Low-Latency HLS.
-hlsVariant: lowLatency
-# Number of HLS segments to keep on the server.
-# Segments allow to seek through the stream.
-# Their number doesn't influence latency.
-hlsSegmentCount: 7
-# Minimum duration of each segment.
-# A player usually puts 3 segments in a buffer before reproducing the stream.
-# The final segment duration is also influenced by the interval between IDR frames,
-# since the server changes the duration in order to include at least one IDR frame
-# in each segment.
-hlsSegmentDuration: 1s
-# Minimum duration of each part.
-# A player usually puts 3 parts in a buffer before reproducing the stream.
-# Parts are used in Low-Latency HLS in place of segments.
-# Part duration is influenced by the distance between video/audio samples
-# and is adjusted in order to produce segments with a similar duration.
-hlsPartDuration: 200ms
-# Maximum size of each segment.
-# This prevents RAM exhaustion.
-hlsSegmentMaxSize: 50M
-# Directory in which to save segments, instead of keeping them in the RAM.
-# This decreases performance, since reading from disk is less performant than
-# reading from RAM, but allows to save RAM.
-hlsDirectory: ''
 
-###############################################
-# Global settings -> WebRTC server
-
-# Enable publishing and reading streams with the WebRTC protocol.
 webrtc: yes
-# Address of the WebRTC HTTP listener.
 webrtcAddress: :8889
-# Enable TLS/HTTPS on the WebRTC server.
 webrtcEncryption: no
-# Path to the server key.
-# This can be generated with:
-# openssl genrsa -out server.key 2048
-# openssl req -new -x509 -sha256 -key server.key -out server.crt -days 3650
-webrtcServerKey: server.key
-# Path to the server certificate.
-webrtcServerCert: server.crt
-# Value of the Access-Control-Allow-Origin header provided in every HTTP response.
-# This allows to play the WebRTC stream from an external website.
 webrtcAllowOrigin: '*'
-# List of IPs or CIDRs of proxies placed before the WebRTC server.
-# If the server receives a request from one of these entries, IP in logs
-# will be taken from the X-Forwarded-For header.
-webrtcTrustedProxies: []
-# Address of a local UDP listener that will receive connections.
-# Use a blank string to disable.
-webrtcLocalUDPAddress: :8189
-# Address of a local TCP listener that will receive connections.
-# This is disabled by default since TCP is less efficient than UDP and
-# introduces a progressive delay when network is congested.
-webrtcLocalTCPAddress: ''
-# WebRTC clients need to know the IP of the server.
-# Gather IPs from interfaces and send them to clients.
-webrtcIPsFromInterfaces: yes
-# List of interfaces whose IPs will be sent to clients.
-# An empty value means to use all available interfaces.
-webrtcIPsFromInterfacesList: []
-# List of additional hosts or IPs to send to clients.
-webrtcAdditionalHosts: []
-# ICE servers. Needed only when local listeners can't be reached by clients.
-# STUN servers allows to obtain and share the public IP of the server.
-# TURN/TURNS servers forces all traffic through them.
-webrtcICEServers2: []
-  # - url: stun:stun.l.google.com:19302
-  # if user is "AUTH_SECRET", then authentication is secret based.
-  # the secret must be inserted into the password field.
-  # username: ''
-  # password: ''
-  # clientOnly: false
 
-###############################################
-# Global settings -> SRT server
-
-# Enable publishing and reading streams with the SRT protocol.
 srt: yes
-# Address of the SRT listener.
 srtAddress: :8890
 
-###############################################
-# Default path settings
-
-# Settings in "pathDefaults" are applied anywhere,
-# unless they are overridden in "paths".
 pathDefaults:
-
   ###############################################
   # Default path settings -> General
 
