--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "version": "2.10.0",
     "description": "Infrastructure to support LDAP based auth in TAK",
     "scripts": {
-        "lint": "eslint cloudformation/*.js cloudformation/lib/*.js",
+        "check": "tsx persist.ts",
+        "lint": "eslint cloudformation/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "engines": {
@@ -24,10 +25,14 @@
     "dependencies": {
         "@openaddresses/batch-alarms": "^4.0.0",
         "@openaddresses/cloudfriend": "^7.0.0",
-        "@openaddresses/deploy": "^8.0.0"
+        "@openaddresses/deploy": "^8.0.0",
+        "node-cron": "^3.0.3",
+        "tsx": "^4.19.2",
+        "yaml": "^2.6.0"
     },
     "devDependencies": {
         "eslint": "^9.9.0",
-        "eslint-plugin-n": "^17.10.2"
+        "eslint-plugin-n": "^17.10.2",
+        "typescript": "^5.6.3"
     }
 }
