--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "engines": {
-        "node": ">= 18"
+        "node": ">= 22"
     },
     "repository": {
         "type": "git",
@@ -33,6 +33,7 @@
     "devDependencies": {
         "eslint": "^9.9.0",
         "eslint-plugin-n": "^17.10.2",
-        "typescript": "^5.6.3"
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.12.2"
     }
 }
