--- a/test/fixtures/SimplePaths.yml
+++ b/test/fixtures/SimplePaths.yml
@@ -31,10 +31,26 @@ authInternalUsers:
     pass: ""
     ips: []
     permissions:
-      - action: publish
-        path: ""
       - action: read
-        path: ""
+        path: path0
+      - action: publish
+        path: path0
+      - action: read
+        path: path1
+      - action: publish
+        path: path1
+      - action: read
+        path: path2
+      - action: publish
+        path: path2
+      - action: read
+        path: path3
+      - action: publish
+        path: path3
+      - action: read
+        path: path4
+      - action: publish
+        path: path4
 authHTTPAddress: ""
 authHTTPExclude:
   - action: api
