--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "@types/json-diff": "^1.0.3",
+        "@types/node": "^22.13.1",
         "@types/node-cron": "^3.0.11",
         "eslint": "^9.9.0",
         "eslint-plugin-n": "^17.10.2",
