--- a/test/fixtures/SimplePaths.yml
+++ b/test/fixtures/SimplePaths.yml
@@ -137,6 +137,7 @@ webrtcAdditionalHosts: []
 webrtcICEServers2: []
 webrtcHandshakeTimeout: 10s
 webrtcTrackGatherTimeout: 2s
+webrtcSTUNGatherTimeout: 5s
 srt: yes
 srtAddress: :8890
 paths:
