--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     restart: always
     environment:
-      - MANAGEMENT_PASSWORD
+      - CLOUDTAK_URL
     ports:
       - 8554:8554
       - 9997:9997
