--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "description": "Infrastructure to support LDAP based auth in TAK",
     "scripts": {
         "build": "tsc",
-        "lint": "eslint persist.ts cloudformation/",
+        "lint": "eslint persist.ts cloudformation/"
     },
     "engines": {
         "node": ">= 22"
