feat: implement comprehensive GitHub Actions workflows for CI/CD
Add complete CI/CD pipeline with testing, building, and deployment workflows:

Workflows Added:
- cdk-test.yml: TypeScript compilation, breaking changes detection, CDK synthesis
- demo-build.yml/production-build.yml: Docker image building with ECR integration
- demo-deploy.yml/production-deploy.yml: Environment-specific deployments with validation
- release.yml: Automated GitHub releases on version tags

Scripts Added:
- scripts/github/validate-changeset.sh: CloudFormation change set validation
- scripts/github/check-breaking-changes.sh: Infrastructure breaking changes detection

Key Features:
- Image tagging: mediamtx-${VERSION}-r${REVISION} format
- Change set validation with [force-deploy] override support
- Breaking changes detection for MediaInfra resources
- ECR integration with BaseInfra stack outputs
- Environment-specific contexts (dev-test/prod)
- Automated testing and deployment pipeline

Breaking Changes:
- Requires DEMO_* and PROD_* GitHub environment variables
- Requires BaseInfra stack deployment for ECR repository
- New deployment commands via GitHub Actions workflows

Closes: CI/CD pipeline implementation for MediaInfra stack

--- a/.github/workflows/cdk-test.yml
+++ b/.github/workflows/cdk-test.yml
@@ -54,7 +54,7 @@ jobs:
           if [[ "${{ github.event.head_commit.message }}" == *"[force-deploy]"* ]]; then
             OVERRIDE="true"
           fi
-          echo "Breaking changes check would run here for media-infra"
+          ./scripts/github/check-breaking-changes.sh media prod $OVERRIDE
 
       - name: Run CDK synthesis test
         run: npm run synth
