fix: align Docker image tagging between build and deploy workflows
Fix mismatch where build workflows used simple tagging format while deploy
workflows expected version-revision format.

Changes:
- demo-build.yml: Use mediamtx.version + mediamtx.buildRevision from cdk.json
- production-build.yml: Use mediamtx.version + mediamtx.buildRevision from cdk.json
- Both now generate: mediamtx-${VERSION}-r${REVISION} format
- Ensures built images match deployment consumption

Before: mediamtx-latest (from docker.mediamtxImageTag)
After: mediamtx-1.13.1-r1 (from mediamtx.version + mediamtx.buildRevision)

Fixes: Docker image tag mismatch causing deployment failures

--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -62,13 +62,14 @@ jobs:
           ECR_REPO_NAME=$(echo $ECR_REPO_ARN | cut -d'/' -f2)
           ECR_REPO_URI="${{ secrets.PROD_AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.PROD_AWS_REGION }}.amazonaws.com/${ECR_REPO_NAME}"
           
-          MEDIAMTX_TAG=$(jq -r '.context."prod".docker.mediamtxImageTag' cdk.json)
+          VERSION=$(jq -r '.context."prod".mediamtx.version' cdk.json)
+          REVISION=$(jq -r '.context."prod".mediamtx.buildRevision' cdk.json)
           
           if [[ "${{ github.event.inputs.force_rebuild }}" == "true" ]]; then
             TIMESTAMP=$(date +%Y%m%d-%H%M%S)
-            MEDIAMTX_TAG="mediamtx-${MEDIAMTX_TAG}-${TIMESTAMP}"
+            MEDIAMTX_TAG="mediamtx-${VERSION}-r${REVISION}-${TIMESTAMP}"
           else
-            MEDIAMTX_TAG="mediamtx-${MEDIAMTX_TAG}"
+            MEDIAMTX_TAG="mediamtx-${VERSION}-r${REVISION}"
           fi
           
           echo "ecr-repo-uri=$ECR_REPO_URI" >> $GITHUB_OUTPUT
