feat: align media-infra CDK patterns with tak-infra for improved robustness
- Add comprehensive validation utilities (validateEnvType, validateStackName, validateMediaMtxConfig)
- Implement structured configuration objects (InfrastructureConfig, NetworkConfig, SecretsConfig, StorageConfig)
- Move container image strategy to stack level with ECR ARN parsing
- Replace registerOutputs() with individual CfnOutput declarations
- Add early configuration validation and error handling
- Standardize AZ handling to match tak-infra pattern
- Add context override utilities with command-line parameter support
- Centralize MediaMTX port constants and update all references
- Add standardized resource tagging with generateStandardTags()
- Update MediaEcsService to use structured configuration interfaces

--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -64,4 +64,4 @@ jobs:
           fi
 
       - name: Deploy Production
-        run: npm run cdk deploy -- --context environment=prod --context usePreBuiltImages=true --context mediamtxImageTag=${{ steps.images.outputs.mediamtx-tag }} --require-approval never
+        run: npm run cdk deploy -- --context envType=prod --context stackName=${{ vars.PROD_STACK_NAME }} --context usePreBuiltImages=true --context mediamtxImageTag=${{ steps.images.outputs.mediamtx-tag }} --require-approval never
