feat: align media-infra with upstream dfpc-coe implementation
- Switch from YAML file-based to MediaMTX REST API path management
- Update type definitions to match upstream (CloudTAKRemotePath, Path)
- Replace sourceOnDemand with FFmpeg runOnInit commands
- Use API-based CRUD operations for immediate sync
- Update API endpoint to /api/video/auth
- Add yq dependency for YAML processing
- Fix Docker config path mapping issue
- Simplify cron schedule to */10 format

--- a/docker-container/mediamtx.yml
+++ b/docker-container/mediamtx.yml
@@ -1,4 +1,4 @@
-# This Config file is reduced to the min required use case for COTAK
+# This Config file is reduced to the min required use case for TAK.NZ
 # View: https://github.com/bluenviron/mediamtx/blob/main/mediamtx.yml
 # For full MediaMTX Config Options
 
@@ -11,7 +11,7 @@ writeQueueSize: 1024
 udpMaxPayloadSize: 1472
 
 authMethod: http
-authHTTPAddress: http://example.com
+authHTTPAddress: CLOUDTAK_URL/api/video/auth
 authHTTPExclude: []
 
 api: yes
