feat: switch to MediaMTX native proxy for HLS streams
- Replace FFmpeg transcoding with MediaMTX source/sourceOnDemand
- Fix authInternalUsers config breaking management API authentication
- Reduce sync frequency from 10s to 30s intervals
- Remove verbose debug logging for cleaner output
- Improve startup performance from 10-30s to instant stream availability

Resolves performance issues with FFmpeg transcoding causing excessive
CPU usage and startup delays for 4K HLS proxy streams.

--- a/docker-container/mediamtx.yml
+++ b/docker-container/mediamtx.yml
@@ -49,3 +49,7 @@ webrtcAllowOrigin: '*'
 
 srt: yes
 srtAddress: :8890
+
+# Path defaults - increase timeout for slow HLS sources
+pathDefaults:
+  runOnDemandStartTimeout: 30s
