Support CloudTAK APIs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     },
     "exclude": [],
     "include": [
-        "*.ts"
+        "*.ts",
+        "lib/**/*.ts",
+        "routes/**/*.ts"
     ]
 }
