--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "description": "Infrastructure to support Live Video streams in CloudTAK",
     "scripts": {
         "build": "tsc",
-        "lint": "eslint persist.ts cloudformation/"
+        "lint": "eslint index.ts lib/*.ts routes/*.ts cloudformation/"
     },
     "engines": {
         "node": ">= 22"
