--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
         "@openaddresses/cloudfriend": "^7.0.0",
         "@openaddresses/deploy": "^9.1.0",
         "@sinclair/typebox": "^0.34.41",
+        "axios": "^1.13.2",
         "cors": "^2.8.5",
         "jsonwebtoken": "^9.0.2",
+        "m3u8-parser": "^7.2.0",
+        "node-cache": "^5.1.2",
         "node-cron": "^4.0.0",
         "tsx": "^4.19.2",
-        "undici": "^7.16.0"
+        "undici": "^7.16.0",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.19",
