--- a/.github/workflows/ecr_api.yml
+++ b/.github/workflows/ecr_api.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.draft == false
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
         with:
           ref: ${{github.event.pull_request.head.sha || github.sha}}
 
@@ -31,9 +31,17 @@ jobs:
           role-session-name: GithubECRBuilder
           aws-region: ${{secrets.AWS_REGION}}
 
-      - name: Docker Build
+      - name: Docker Build (WFTAK)
         run: node bin/build.js
         env:
+          Environment: 'wftak-prod'
+          AWS_ACCOUNT_ID: ${{secrets.AWS_ACCOUNT_ID}}
+          AWS_REGION: ${{secrets.AWS_REGION}}
+          
+      - name: Docker Build (COTAK)
+        run: node bin/build.js
+        env:
+          Environment: 'cotak-prod'
           AWS_ACCOUNT_ID: ${{secrets.AWS_ACCOUNT_ID}}
           AWS_REGION: ${{secrets.AWS_REGION}}
 
@@ -44,8 +52,16 @@ jobs:
           role-session-name: GithubECRBuilder
           aws-region: ${{secrets.AWS_STAGING_REGION}}
 
-      - name: Docker Build (STAGING)
+      - name: Docker Build (STAGING COTAK)
         run: node bin/build.js
         env:
+          Environment: 'cotak-staging'
+          AWS_ACCOUNT_ID: ${{secrets.AWS_STAGING_ACCOUNT_ID}}
+          AWS_REGION: ${{secrets.AWS_STAGING_REGION}}
+
+      - name: Docker Build (WFTAK COTAK)
+        run: node bin/build.js
+        env:
+          Environment: 'wftak-staging'
           AWS_ACCOUNT_ID: ${{secrets.AWS_STAGING_ACCOUNT_ID}}
           AWS_REGION: ${{secrets.AWS_STAGING_REGION}}
